--- a/temp.css
+++ b/temp.css
@@ -75,3 +75,40 @@
     border: 3px solid blueviolet;
     border-radius: 12px;
  }
+
+
+
+
+
+ @media (max-width:500px) {
+   
+
+   .m{
+    /* background-color: yellow; */
+    height:300px ;
+    width: 250px;
+    gap : 60px;
+    grid-template-columns: 100px 100px;
+    grid-template-rows: 100px 100px;
+    margin-top: 40px;
+    flex-direction: column;
+justify-content: center;
+align-items: center;
+ 
+   }
+
+   #f{
+     margin-left: 30px;
+     width: 200px;
+     height: 50px;
+   
+   }
+
+   #c{
+     width: 200px;
+     height: 50px;
+     margin-left: 30px;
+   }
+
+
+}
