--- a/mass.css
+++ b/mass.css
@@ -92,3 +92,38 @@ margin-right: 100px;
 height: 40px;
       
     }
+
+
+
+    @media (max-width:500px) {
+   
+
+      .m{
+       /* background-color: yellow; */
+       height:300px ;
+       width: 250px;
+       gap : 60px;
+       grid-template-columns: 100px 100px;
+       grid-template-rows: 100px 100px;
+       margin-top: 40px;
+       flex-direction: column;
+   justify-content: center;
+   align-items: center;
+    
+      }
+
+      #input{
+        margin-left: 30px;
+        width: 200px;
+        height: 50px;
+      
+      }
+
+      #result{
+        width: 200px;
+        height: 50px;
+        margin-left: 30px;
+      }
+   
+   
+   }
